<resources>
    <string name="app_name">Beleaf</string>
    <string name="title_news">news</string>
    <string name="title_footprint">footprint</string>
    <string name="title_forest">forest</string>
    <string name="title_goals">goals</string>
    <string name="title_me">me</string>
    <string name="continue_btn"><![CDATA[Continue]]></string>
    <string name="title_activity_news">News</string>
    <string name="transport_mode">How do you get to work/school?</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news_headline1">Donald Trump: \"My name is Donald Trump\"</string>
    <string name="news_headline2">World\'s last panda is dead</string>
    <string name="news_headline3">The last ice cube ever melted away</string>
    <string name="title_activity_me">Me</string>
    <string name="title_activity_goals">activity_goals</string>
    <string name="goals">save the earth!</string>
    <string name="val3">25</string>
    <string name="val6">3</string>
    <string name="val4">3</string>
    <string name="tip6">use a reusable water bottle</string>
    <string name="val7">4</string>
    <string name="val5">3</string>
    <string name="tip1">turn off the faucet while brushing</string>
    <string name="tip5">shop with a reusable tote bag</string>
    <string name="read">read</string>
    <string name="reuse">reuse</string>
    <string name="tip4">fill a reusable coffee mug</string>
    <string name="tip7">read 3 articles about climate change</string>
    <string name="val1">5</string>
    <string name="reduce">reduce</string>
    <string name="val2">20</string>
    <string name="tip2">shower less than 10 minutes</string>
    <string name="tip3">shower less than 5 minutes</string>
    <string name="email_value">m*******@umass.edu</string>
    <string name="me_num_seed">25</string>
    <string name="me_num_raindrop">40</string>
    <string name="me_num_leaf">5</string>
    <string name="news_article1image">image</string>
    <string name="email">email</string>
    <string name="first_setup">First time setup!</string>
    <string name="setup_description">We\'ll ask you some questions about your habits. Then you can see your stats and update them to track your progress!</string>
    <string name="title_activity_footprint2">Footprint2</string>
    <string name="title_activity_footprint3">Footprint3</string>
    <string name="car">What kind of car do you drive?</string>
    <string name="skip_btn">Skip</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="distance">How far do you travel every day?</string>
    <string name="start_address">Start Address</string>
    <string name="end_address">End Address</string>
    <string name="dist_description">Enter your start and end location and we\'ll calculate it for you</string>
    <string name="shower">How long do you shower per day?</string>
    <string name="minutes">minutes</string>
    <string name="teethbrushing">Do you leave the faucet on when you brush your teeth?</string>
    <string name="cont_stats">Continue to stats page</string>
    <string name="stats_desc">All set! Check out the goals tab to claim resources for doing sustainable acts.</string>
    <string name="update_stats">Update Stats</string>
    <string name="weekly_stats">weekly stats</string>
    <string name="gas_stat">gas usage</string>
    <string name="water_stat">water usage</string>
    <string name="you">you</string>
    <string name="user_avg">user average</string>
    <string name="update1">How many days did you go to work/school this week?</string>
    <string name="update2">How long did you shower per day?</string>
    <string name="update3">How many days did you leave the faucet on while brushing?</string>
    <string name="update_title">update stats</string>
    <string name="days">days</string>

    <string name="title_activity_footprint">Footprint</string>
    <string name="goals_button_claim">claim</string>
    <string name="goals_button_nudge">set nudge</string>
    <string name="reduce_goal1">turn off the faucet while brushing</string>
    <string name="reduce_goal2">shower less than 10 minutes</string>
    <string name="reduce_goal3">shower less than 5 minutes</string>
    <string name="reuse_goal1">fill a reusable coffee mug</string>
    <string name="reuse_goal2">shop with a reusable tote bag</string>
    <string name="reuse_goal3">use a reusable water bottle</string>
    <string name="read_goal1">read an article about solar energy</string>
    <string name="read_goal2">read an article about carbon emissions</string>
    <string name="read_goal3">read an article about the EPA</string>
    <string name="title_activity_footprint4">Footprint4</string>
    <string name="title_home">Home</string>
    <string name="title_activity_footprint5">Footprint5</string>
    <string name="title_activity_footprint6">Footprint6</string>
    <string name="title_activity_footprint7">Footprint7</string>
    <string name="reduce_goal1_value">5</string>
    <string name="reduce_goal2_value">20</string>
    <string name="reduce_goal3_value">25</string>
    <string name="reuse_goal1_value">3</string>
    <string name="reuse_goal2_value">3</string>
    <string name="reuse_goal3_value">3</string>
    <string name="read_goal1_value">4</string>
    <string name="read_goal2_value">6</string>
    <string name="read_goal3_value">1</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_update_stats">UpdateStats</string>
    <string name="title_activity_nudges">Nudges</string>
    <string name="title_activity_nudge">Nudge</string>
    <string name="title_activity_stats2">stats2</string>
</resources>
