<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news"/>

    <item
        android:id="@+id/navigation_footprint"
        android:icon="@drawable/ic_footprint"
        android:title="@string/title_footprint" />

    <item
        android:id="@+id/navigation_forest"
        android:icon="@drawable/ic_forest"
        android:title="@string/title_forest" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/title_goals" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_me"
        android:title="@string/title_me" />

</menu>
