<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/goals"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:text="save the earth!" />

    <ImageView
        android:id="@+id/logo-division"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_beleaf"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:tint="@android:color/holo_green_light" />

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="324dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/val3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val3"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="25" />

        <ImageView
            android:id="@+id/drop3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/holo_blue_bright"
            app:srcCompat="@drawable/ic_raindrop" />

        <TextView
            android:id="@+id/tip3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="shower less than 5 minutes"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="shower less than 5 minutes" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="324dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val2"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="20" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/holo_blue_bright"
            app:srcCompat="@drawable/ic_raindrop"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tip2"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="shower less than 10 minutes" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="327dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/logo-division"
        app:layout_constraintVertical_bias="0.71">

        <TextView
            android:id="@+id/val6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val6"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="3" />

        <ImageView
            android:id="@+id/leaf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_leaf"
            tools:tint="@android:color/holo_green_light"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tip6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tip6"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="use reusable water bottle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="327dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/logo-division"
        app:layout_constraintVertical_bias="0.603">

        <TextView
            android:id="@+id/val5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val5"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="3" />

        <ImageView
            android:id="@+id/leaf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_leaf"
            tools:tint="@android:color/holo_green_light"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tip5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tip5"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="shop with a reusable tote bag" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="33dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/read"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo-division"
        app:layout_constraintVertical_bias="0.844"
        tools:text="read" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="44dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reuse"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.516"
        tools:text="reuse" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@android:color/holo_green_light"
        app:itemTextColor="@android:color/holo_green_light"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="327dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/logo-division"
        app:layout_constraintVertical_bias="0.496">

        <TextView
            android:id="@+id/val4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val4"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="3" />

        <ImageView
            android:id="@+id/leaf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_leaf"
            tools:tint="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/tip4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tip4"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="fill a reusable coffee mug" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="329dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val7"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="4" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/holo_red_light"
            app:srcCompat="@drawable/ic_seed"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tip7"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/tip7"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="read 3 articles about climate change" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="326dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/logo-division">

        <TextView
            android:id="@+id/val1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/val1"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="5" />

        <ImageView
            android:id="@+id/drop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"
            android:tint="@android:color/holo_blue_bright"
            app:srcCompat="@drawable/ic_raindrop"
            android:layout_marginStart="8dp"
            tools:context="edu.umass.cs325.beleaf.Goals" />

        <TextView
            android:id="@+id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tip1"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat"
            tools:text="turn off the faucet while brushing" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="48dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reduce"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo-division"
        app:layout_constraintVertical_bias="0.0"
        tools:text="reduce" />

</android.support.constraint.ConstraintLayout>